# code

./: .gitignore  RamParser.py  VerilogParser.py  binary_check.py  check_comma.py  comment_toggle.vim  detailed_test.py  extract_word_tables.py  multi_module_test.sv  replace_tokens.py  run_makefiles.sh  signal_connection_analyzer.py  simple_test.py  simplest_test.py  sync-whl.ps1  temp_test.sv  test_module.sv  test_non_ansi.sv  test_push.md  test_refactored.py  verible_format.vim  write_test.py
.github/workflows/: build.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-02-04_06-38-12Z-模块功能总结请求.md  2026-02-04_08-24-01Z-整理相关文件到一个文件夹.md  2026-02-04_08-48-34Z-python工具分析信号与模块连接关系.md  2026-02-05_02-43-50Z-python-code-for-extracting-html-anchor-names.md  2026-02-28_02-05-07Z-python-script-for-filelistf-processing.md  2026-03-09_01-43-54Z-document-summary-request-for-llfec-specification.md  2026-03-15_06-49-01Z-计算rs编码参数和消息内容.md  2026-03-24_01-37-00Z-安装yazi工具指南.md  2026-03-25_03-29-45Z-zsh脚本执行每个文件夹的makefile.md  2026-03-25_05-33-38Z-nvim-使用问题咨询.md  2026-03-25_07-36-53Z-gvim-system-verilog-syntax-highlighting-configuration.md  2026-03-27_09-38-58Z-understanding-gvim-glibgiocritical-error-message.md  2026-03-30_06-40-47Z-powershell安装git指南.md  2026-04-07_03-20-37Z-脚本功能分析请求.md  2026-04-07_09-49-12Z-python-script-for-extracting-macro-values.md  2026-04-08_05-28-40Z-推荐linux-xml查看器工具.md  2026-04-14_01-42-13Z-python-script-creation-request-for-restoretokenpy.md  2026-04-15_02-38-29Z-创建支持python-368的ramgenpy文件.md  2026-04-15_03-21-56Z-forked-创建支持python-368的ramgenpy文件.md  2026-04-21_01-56-44Z-python-312-missing-tkinter-module.md  2026-04-21_05-19-03Z-installing-cksum-in-powershell.md  2026-04-21_06-13-15Z-脚本v模式输出与非v模式不一致.md  2026-04-21_08-18-04Z-python脚本抓取和提取数据.md  2026-04-21_08-40-25Z-html-to-json-conversion-tool-development.md  2026-04-21_08-52-27Z-文件分析与字段定义解释.md  2026-04-27_06-58-48Z-create-runallsh-script-for-xfce4terminal.md  2026-04-28_09-19-03Z-untitled.md  2026-04-29_03-04-24Z-脚本功能分析与python改写.md  2026-04-30_02-29-26Z-ramgen安装路径问题讨论.md  2026-05-06_03-38-11Z-更新cellgen源码生成whl.md  2026-05-06_08-51-32Z-分析-python-功能.md  2026-05-07_05-29-33Z-install-universal-ctags.md  2026-05-07_06-06-01Z-gvim行注释函数实现.md  2026-05-07_06-06-01Z-untitled.md  2026-05-07_06-48-23Z-gvim-f5执行veribleverilogformat.md  2026-05-07_06-48-23Z-untitled.md  2026-05-07_08-53-46Z-httpswwwvimorgscriptsscriptphpscriptid5.md  2026-05-07_08-53-46Z-vtags-support-for-systemverilog.md  2026-05-07_09-02-37Z-parser目录功能分析.md  2026-05-07_09-02-37Z-untitled.md  (+5 more)
cellgen/: log.csv  log_result.csv  pyproject.toml  setup.py
cellgen/archive/20260430_114347/cellgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cellgen/src/cellgen.egg-info/: SOURCES.txt  top_level.txt
ef/: README.md  setup.py
ef/src/: pyproject.toml
ef/src/ef.egg-info/: SOURCES.txt
fec/: FEC_INPUT_SYMBOLS_DETAIL.md  rs272_258_encoder_16p.sv
gen_excel/: docx_table_to_csv.py
getaxiinfo/: pyproject.toml
getaxiinfo/archive/20260430_112203/getaxiinfo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
getaxiinfo/src/getaxiinfo/: __init__.py
getaxiinfo/src/getaxiinfo.egg-info/: SOURCES.txt  entry_points.txt
makeone/: config.ini  makeone.py
modeditor/: .gitignore  pyproject.toml
modeditor/examples/: test1.sv  test_out.sv
modeditor/src/modeditor/: __init__.py  __main__.py  cli.py  utils.py
modeditor/tests/: debug_close_idx.py  debug_detailed.py  debug_final.py  debug_find_span.py  debug_manual.py  debug_step_by_step.py  debug_vars.py  test_add_port.py  test_apply_edits.py  test_both.py  test_both_modes.py  test_correct_edits.py  test_declaration.py  test_fixes.py  test_inst_port_edge.py  test_inst_port_formatting.py  test_port_formatting.py  test_simple_edit.py
pciegen/: pciegen.py
pciegen/examples/: rule.csv  tmp.sv
pciegen/test/: run_no_ramgen_scenario.py
postsim_analyzer/: postsim_analyzer.py
ramgen/: .gitignore  README.md  pyproject.toml
ramgen/examples/: pcie_iip_rams.sv
ramgen/src/ramgen/: __init__.py  main.py  ram_analyzer.py  ram_generator.py  ram_simulation.py
runall/: pyproject.toml
runall/archive/20260430_112203/runall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
runall/src/runall.egg-info/: SOURCES.txt  entry_points.txt
smics28_mem_gen/: README.md  pyproject.toml
smics28_mem_gen/archive/20260430_112203/smics28_mem_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
smics28_mem_gen/src/smics28_mem_gen.egg-info/: SOURCES.txt  entry_points.txt
verilog_extractor_project/: COMPLETION_REPORT.txt  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_CONNECTION_GRAPH.md  SIGNAL_CONNECTION_GUIDE.md  example_comprehensive_analysis.py  test_comprehensive.py  test_connection_graph.py  test_connection_practical.py  test_verilog.v  verilog_extractor.py
vmodeditor/: pyproject.toml
vmodeditor/src/vmodeditor/: __init__.py  __main__.py  cli.py  utils.py
vmodeditor/src/vmodeditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vtags-3.11/: vtags.py
vtags-3.11/Lib/: BaseLib.py  FileInfLib.py  GLB.py
vutils/: TODO.md  pyproject.toml  test_cli_all.py  test_utils.py
vutils/examples/: test_parser.sv
vutils/src/vutils/: __init__.py  __main__.py  vcli.py  vedit.py  vparser.py  vparser_fix.py  vutils.py
vutils/test/: test_add_inst_port_macro.py  test_inst_port_regression.py  test_utils.py  test_vparser_api.py
xreg/: pyproject.toml
xreg/archive/20260430_112203/xreg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
xreg/exapmle/: usp.ralf
xreg/src/xreg/: __init__.py
xreg/src/xreg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+8 files in other folders)
