[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ramgen"
version = "0.2.3"
description = "SystemVerilog RAM analysis and generation utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
ramgen = "ramgen.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
