[project]
name = "vutils"
version = "0.1.0"
description = "Parse and edit Verilog/SystemVerilog module ports, wires, and instances using verible-verilog-syntax"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vutils = "vutils.vcli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vutils*"]
exclude = ["vutils.tests*"]
