[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xreg"
version = "0.2.0"
description = "RALF register description to structured output converter"
requires-python = ">=3.6.8"
authors = [
  { name = "local-user" }
]
dependencies = [
  "xlwt"
]

[project.scripts]
xreg = "xreg.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
