[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ef"
version = "1.2.0"
description = "Verilog/SystemVerilog file list expander with recursive parsing support"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Developer"}
]
keywords = ["verilog", "systemverilog", "filelist", "compiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/ef"
Documentation = "https://github.com/yourusername/ef/README.md"

[project.scripts]
ef = "ef.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
